fixed post image dimensions
Wide images used to be squished on narrow displays. Now they are not.

--- a/src/css/_posts.scss
+++ b/src/css/_posts.scss
@@ -33,11 +33,19 @@
 }
 .post img {
 	display: block;
-	height: 20rem;
 	margin: 0 auto;
-	width: auto;
-	max-width: 100%;
 }
+
+.post img[data-orientation='landscape'] {
+	height: auto;
+	width: 100%;
+}
+.post img[data-orientation='portrait'],
+.post img[data-orientation='square'] {
+	height: 20rem;
+	width: auto;
+}
+
 .post b,
 .post date {
 	color: #fff;
